--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lourd/react-google-api": "^0.2.1",
     "bignumber": "^1.1.0",
     "bignumber.js": "^7.2.1",
+    "fs": "0.0.1-security",
+    "googleapis": "^36.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
+    "readline": "^1.3.0",
     "truffle-contract": "^4.0.0-next.0",
     "web3": "^1.0.0-beta.35"
   },
